--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,29 @@
-Flask>=2.0.3
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.4.0
-boto==2.49.0
-certifi==2022.5.18.1
-chardet==4.0.0
-click==8.0.3
-cycler==0.11.0
-Flask==2.0.3
-Flask-SQLAlchemy==2.5.1
-fonttools==4.25.0
-greenlet==1.1.2
-gunicorn==20.1.0
-idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-kiwisolver==1.4.2
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-multidict==6.0.2
-munkres==1.1.4
-numpy==1.22.3
-packaging==21.3
-Pillow==9.0.1
-pip==21.2.4
-psycopg2-binary==2.9.3
-pyparsing==3.0.4
-python-dateutil==2.8.2
-setuptools==61.2.0
-six==1.16.0
-SQLAlchemy==1.4.36
-tornado==6.1
-typing_extensions==4.2.0
-Werkzeug==2.0.3
-wheel==0.37.1
-yarl==1.7.2
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+blinker=1.6.2=pypi_0
+bzip2=1.0.8=h6c40b1e_6
+ca-certificates=2024.6.2=h8857fd0_0
+click=8.1.7=pypi_0
+expat=2.6.2=hcec6c5f_0
+flask=3.0.3=pypi_0
+gunicorn=22.0.0=pypi_0
+itsdangerous=2.2.0=pypi_0
+jinja2=3.1.4=pypi_0
+libcxx=14.0.6=h9765a3e_0
+libffi=3.4.4=hecd8cb5_1
+markupsafe=2.1.3=pypi_0
+ncurses=6.4=hcec6c5f_0
+openssl=3.3.1=h87427d6_1
+packaging=24.1=pyhd8ed1ab_0
+pip=24.0=pypi_0
+python=3.12.4=hcd54a6c_1
+readline=8.2=hca72f7f_0
+setuptools=69.5.1=pypi_0
+sqlite=3.45.3=h6c40b1e_0
+tk=8.6.14=h4d00af3_0
+tzdata=2024a=h04d1e81_0
+werkzeug=3.0.3=pypi_0
+wheel=0.43.0=pypi_0
+xz=5.4.6=h6c40b1e_1
+zlib=1.2.13=h4b97444_1
