--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-blinker==1.6.2
+blinker==1.8.2
 click==8.1.7
 Flask==3.0.3
-gunicorn==22.0.0
+greenlet==3.0.1
+importlib_metadata==8.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-MarkupSafe==2.1.3
-packaging==24.1
+MarkupSafe==2.1.5
 pip==24.0
+psycopg2==2.9.9
 setuptools==69.5.1
+SQLAlchemy==2.0.30
+typing_extensions==4.11.0
 Werkzeug==3.0.3
 wheel==0.43.0
-psycopg2-binary==2.9.3
-SQLAlchemy==1.4.36
-openai==1.35.13
-Flask-SQLAlchemy==2.5.1
-
+zipp==3.19.2
