--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 pip==24.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 setuptools==69.5.1
 SQLAlchemy==2.0.30
 typing_extensions==4.11.0
